# jls

./: .gitignore  CMakeLists.txt  README.md
cmake/: uninstall.cmake
doc/: Doxyfile
include/: color.h  fileInfo.h  jls.h
scripts/: makeTestEnv  makeTests
src/: color.c  fileInfo.c  jls.c  main.c
